[gd_scene load_steps=2 format=3 uid="uid://dr6tgiq50mq86"]

[ext_resource type="Script" path="res://UIObjects/StartMenu/CreateCharacterMenu/CreateCharacterMenu.gd" id="1_1kk1v"]

[node name="CreateCharacterMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kk1v")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CharacterNameLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Character Name: "

[node name="CharacterNameEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Input Character Name"
max_length = 30

[node name="CreateCharacterButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Create Character"

[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/CharacterNameEdit" to="." method="_on_character_name_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CreateCharacterButton" to="." method="_on_create_character_button_pressed"]
